[gd_scene load_steps=3 format=3 uid="uid://diyqsdng8bkj6"]

[ext_resource type="Script" uid="uid://cgoew7fa85qf1" path="res://General/scenes/weapon_screen/next_button.gd" id="1_cg7dg"]
[ext_resource type="LabelSettings" uid="uid://dlx67ty00ecj7" path="res://_project_system_files/label_level_select_settings.tres" id="2_ujl6i"]

[node name="next_button" type="Button"]
offset_right = 80.0
offset_bottom = 9.0
flat = true
script = ExtResource("1_cg7dg")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_right = 12.0
offset_bottom = 9.0
text = "â†’"
label_settings = ExtResource("2_ujl6i")

[node name="Next" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_right = 76.0
offset_bottom = 9.0
text = "NEXT"
label_settings = ExtResource("2_ujl6i")

[node name="blinker" type="Timer" parent="."]
wait_time = 0.25

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="blinker" to="." method="_on_blinker_timeout"]
